--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,6 +1,7 @@
 source "https://rubygems.org"
 
 gem "jekyll", "~> 4.3"
+gem "jekyll-sass-converter", "~> 2.2"
 gem "just-the-docs", "~> 0.8"
 
 group :jekyll_plugins do
