--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "napi": {
-    "name": "zippy-core",
+    "name": "zippy-data",
     "cargoManifestPath": "../crates/zippy_nodejs/Cargo.toml",
     "triples": {
       "defaults": true,
