Trusted publishing and Github release fix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,6 +140,9 @@ jobs:
     name: Publish to npm
     needs: build-nodejs
     runs-on: ubuntu-latest
+    environment: release
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       
@@ -157,10 +160,9 @@ jobs:
           path: crates/zippy_nodejs
       
       - name: Publish to npm
-        run: npm publish --access public --ignore-scripts
+        run: npm publish --provenance --access public --ignore-scripts
         working-directory: crates/zippy_nodejs
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        # No token needed - uses npm trusted publishing (OIDC)
 
   # Publish to crates.io
   publish-cargo:
@@ -192,14 +194,29 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: artifacts
-      
+
+      - name: Stage unique release assets
+        shell: bash
+        run: |
+          mkdir -p release-assets
+          declare -A seen
+          while IFS= read -r -d '' file; do
+            name="$(basename "$file")"
+            if [[ -z "${seen[$name]}" ]]; then
+              cp "$file" "release-assets/$name"
+              seen[$name]=1
+            else
+              echo "Skipping duplicate artifact: $name"
+            fi
+          done < <(find artifacts -type f -print0)
+
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            artifacts/**/*.whl
-            artifacts/**/*.tar.gz
-            artifacts/**/*.node
+            release-assets/*.whl
+            release-assets/*.tar.gz
+            release-assets/*.node
           generate_release_notes: true
           draft: false
           prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') || contains(github.ref, 'rc') }}
