--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -162,12 +162,14 @@ jobs:
       - name: Publish to npm
         run: npm publish --provenance --access public --ignore-scripts
         working-directory: crates/zippy_nodejs
-        # No token needed - uses npm trusted publishing (OIDC)
 
   # Publish to crates.io
   publish-cargo:
     name: Publish to crates.io
     runs-on: ubuntu-latest
+    environment: release
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       
@@ -176,8 +178,6 @@ jobs:
       
       - name: Publish zippy_data
         run: cargo publish -p zippy_data --allow-dirty
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
         continue-on-error: true  # May fail if already published
 
   # Create GitHub Release
