Upgrade npm for publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,6 +151,9 @@ jobs:
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
+
+      - name: Upgrade npm (required for trusted publishing)
+        run: npm install -g npm@latest
       
       - name: Download all artifacts
         uses: actions/download-artifact@v4
