--- a/crates/zippy_data/Cargo.toml
+++ b/crates/zippy_data/Cargo.toml
@@ -21,6 +21,10 @@ rayon = "1.10"
 simd-json = "0.14"
 memchr = "2.7"                    # SIMD newline search
 rustc-hash = "2.0"                # FxHashMap - faster hashing
+fs2 = "0.4"                       # Cross-platform file locking (flock)
+once_cell = "1.19"                # Global lazy statics for root cache
+parking_lot = "0.12"              # Fast RwLock for cache
+hostname = "0.4"                  # Get hostname for lock info
 
 [dev-dependencies]
 criterion = "0.5"
